[project]
name = "concept_map_generator"
version = "0.1.0"
description = "concept_map_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
concept_map_generator = "concept_map_generator.main:run"
run_crew = "concept_map_generator.main:run"
train = "concept_map_generator.main:train"
replay = "concept_map_generator.main:replay"
test = "concept_map_generator.main:test"
run_with_trigger = "concept_map_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
